# ai_cli

./: Cargo.toml  Jenkinsfile  README.md
src/: main.rs
