[package]
name = "ai_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
csv = "1.3"
chrono = "0.4"
sys-info = "0.9"
rand = "0.8"
dirs = "5.0.1"
anyhow = "1.0"
async-openai = "0.28.1"
